[package]
name = "btgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = { version = "0.16", features = [ "simd-stable", "debug-render" ] }
rand = "0.8"
rand_distr = "0.4"
bevy_egui = "0.15"
rmpfit = "0.2.0"
iyes_loopless = "0.7"